--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "illuminate/support": "4.*",
-        "google/apiclient": "dev-master"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "classmap": [
