--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "illuminate/support": "5.*",
+        "google/apiclient": "1.1.*@dev"
     },
     "autoload": {
         "classmap": [
